# fcmp-plus-plus

./: .gitignore  Cargo.toml  deny.toml
.github/workflows/: tests.yml
crypto/ciphersuite/: Cargo.toml
crypto/ciphersuite/src/: dalek.rs  ed448.rs  helioselene.rs  kp256.rs  lib.rs
crypto/dalek-ff-group/src/: field.rs
crypto/divisors/: Cargo.toml
crypto/divisors/src/: lib.rs  poly.rs
crypto/dkg/src/tests/: promote.rs
crypto/fcmps/: Cargo.toml  README.md
crypto/fcmps/circuit-abstraction/: Cargo.toml  README.md
crypto/fcmps/circuit-abstraction/src/: lib.rs  picus.rs
crypto/fcmps/circuit-abstraction/src/picus/: circom.rs  field_utils.rs  mod.rs  printer.rs
crypto/fcmps/ec-gadgets/: Cargo.toml
crypto/fcmps/ec-gadgets/src/: dlog.rs
crypto/fcmps/src/: circuit.rs  lib.rs  params.rs  picus.rs  tape.rs  tests.rs
crypto/fcmps/src/gadgets/: interactive.rs  mod.rs
crypto/fcmps/src/prover/: blinds.rs  mod.rs
crypto/generalized-bulletproofs/: Cargo.toml
crypto/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  inner_product.rs  lib.rs  lincomb.rs  transcript.rs
crypto/generalized-bulletproofs/src/tests/: arithmetic_circuit_proof.rs
crypto/generalized-schnorr/: Cargo.toml
crypto/generalized-schnorr/src/: lib.rs  mpc.rs
crypto/generalized-schnorr/src/tests/: mod.rs  mpc.rs
crypto/helioselene/: Cargo.toml
networks/monero/ringct/fcmp++/: Cargo.toml
networks/monero/ringct/fcmp++/src/: lib.rs  sal.rs
networks/monero/ringct/fcmp++/src/sal/: legacy_multisig.rs  mod.rs  multisig.rs
networks/monero/ringct/fcmp++/src/tests/: mod.rs  sal.rs
networks/monero/ringct/fcmp++/src/tests/sal/: legacy_multisig.rs  mod.rs  multisig.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: lib.rs
