[package]
name = "generalized-bulletproofs-ec-gadgets"
version = "0.1.0"
description = "Gadgets for working with an embedded Elliptic Curve in a Generalized Bulletproofs circuit"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/fcmps/ec-gadgets"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["bulletproofs", "circuit", "divisors"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
std-shims = { path = "../../../common/std-shims", version = "^0.1.1", default-features = false }

generic-array = { version = "1", default-features = false, features = ["alloc"] }

ciphersuite = { path = "../../ciphersuite", version = "0.4", default-features = false }

generalized-bulletproofs-circuit-abstraction = { path = "../circuit-abstraction", default-features = false }

[features]
std = ["std-shims/std", "ciphersuite/std", "generalized-bulletproofs-circuit-abstraction/std"]
default = ["std"]
