[package]
name = "monero-fcmp-plus-plus"
version = "0.1.0"
description = "Implementation of FCMP++s for Monero"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/networks/monero/ringct/fcmp++"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["monero", "ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["ec-divisors"]

[dependencies]
std-shims = { path = "../../../../common/std-shims", version = "^0.1.1", default-features = false }

rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false }

generic-array = { version = "1", default-features = false, features = ["alloc"] }

blake2 = { version = "0.10", default-features = false }

multiexp = { path = "../../../../crypto/multiexp", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
dalek-ff-group = { path = "../../../../crypto/dalek-ff-group", default-features = false }
ciphersuite = { path = "../../../../crypto/ciphersuite", default-features = false, features = ["ed25519", "helioselene"] }

generalized-bulletproofs = { path = "../../../../crypto/generalized-bulletproofs", default-features = false }
ec-divisors = { path = "../../../../crypto/divisors", default-features = false, features = ["ed25519"] }
generalized-bulletproofs-ec-gadgets = { path = "../../../../crypto/fcmps/ec-gadgets", default-features = false }
fcmps = { package = "full-chain-membership-proofs", path = "../../../../crypto/fcmps", default-features = false }

monero-io = { path = "../../io", default-features = false }
monero-generators = { path = "../../generators", default-features = false }
monero-primitives = { path = "../../primitives", default-features = false }

rand_chacha = { version = "0.3", default-features = false, optional = true }
transcript = { package = "flexible-transcript", path = "../../../../crypto/transcript", default-features = false, optional = true }
modular-frost = { path = "../../../../crypto/frost", default-features = false, features = ["ed25519"], optional = true }

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false }
transcript = { package = "flexible-transcript", path = "../../../../crypto/transcript", default-features = false, features = ["recommended"] }
modular-frost = { path = "../../../../crypto/frost", default-features = false, features = ["ed25519", "tests"] }

[features]
std = [
  "std-shims/std",

  "rand_core/std",
  "zeroize/std",

  "blake2/std",

  "multiexp/std",
  "dalek-ff-group/std",
  "ciphersuite/std",

  "generalized-bulletproofs/std",
  "ec-divisors/std",
  "generalized-bulletproofs-ec-gadgets/std",
  "fcmps/std",

  "monero-io/std",
  "monero-generators/std",
  "monero-primitives/std",

  "rand_chacha?/std",
  "transcript?/std",
]
multisig = ["std", "transcript", "modular-frost"]
default = ["std"]
